Revert "RC-logo.png"
This reverts commit 159a4c3d64ca0e35d91f465c94a993fb7277ef35.

--- a/Structure.html
+++ b/Structure.html
@@ -12,37 +12,26 @@
     <!-- es el cuerpo de mi pagina y donde voy a montar la estructura que el usuario va a visualizar -->
     <body>
         <header>
-            <a href="/index.html">
-            <img src="assets/RC-logo.png" alt="Logo de RollingCode" width="300">
             <!-- Titulo, Logo de la pagina y tambien la barra de navegacion -->
-            </a>
+            <h1>
+                Header de mi pagina
+            </h1>
             <nav>
-                <a href="#">Inicio</a>
-                <a href="pages/gallery/gallery.html">Galleria</a>
-                <a href="pages/contact/contact.html">Contacto</a>
-                <a href="pages/about-us/about-us.html">Acerca de</a>
-                <p></p>
-                <a href="#comentary-h5">comentarios</a>
-                <a href="#BackEnd">back end</a>
+                Inicio
+                Galleria
+                Contacto
+                Acerca de
             </nav>
         </header>
-        <hr>
         <main>
             <!-- Contenido principal -->
+            Main
         </main>
         <h1>Curso RollingCode Fullstack</h1>
         <h2>¿En que consiste ser desarrollador fullstack</h2>
         <h3>FrontEnd</h3>
-            <p>Lorem ipsum dolor sit</p>
-            <ol>
-                <li>da</li>
-                <li>da</li>
-                <li>dasf</li>
-                <li>dasd</li>
-            </ol>
-        <h4 id="BackEnd">BackEnd</h4>
-        <h5 id="comentary-h5">Comentarios</h5>
-        <p>
+        <h4>BackEnd</h4>
+        <p>        
             <h5>Parrafo 1</h5>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore aliquam eius ipsam repudiandae ea, dolore, maiores quae aspernatur architecto a ullam corporis. Nihil omnis iure deleniti quo, optio eos vero.
             Unde minima impedit ut, accusantium ullam quo voluptatem fugiat vitae inventore consequuntur iure placeat sunt saepe aut quia cum quibusdam? Animi sapiente at facilis incidunt laboriosam reprehenderit excepturi dignissimos ipsum!
@@ -57,16 +46,9 @@
         </p>
         <hr>
         <footer>
-            <dl>
-                <dt>
-                    Facebook
-                </dt>
-                <dd>
-                    <a href="https://www.facebook.com/ericgraficc"></a>
-                </dd>
-            </dl>
             <!-- pie de pagina -->
             Curso RollingCode comision 12i - 2021
         </footer>
+        
     </body>
 </html>
