--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
     <!-- contiene informacion de mi pagina  y no es visible al usuario -->
     <head>
+        <link rel="stylesheet" href="CSS/style.css"></link>
         <!-- muestra el titulo en la pestaña del navegador -->
         <title>
             Estructura basica de html
@@ -30,7 +31,7 @@
         <main>
             <!-- Contenido principal -->
         </main>
-        <h1>Curso RollingCode Fullstack</h1>
+        <h1 class="estiloParrafo">Curso RollingCode Fullstack</h1>
         <h2>¿En que consiste ser desarrollador fullstack</h2>
         <h3>FrontEnd</h3>
             <p>Lorem ipsum dolor sit</p>
