--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -21,6 +21,54 @@
     </header>
     <a href="/index.html" target="">Home</a>
     <h1>Contacto</h1>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat animi perspiciatis, provident modi a officia, voluptatibus blanditiis minima maiores cum velit dolore, impedit at eaque! Earum, aut id! Voluptas, aperiam!
+    <h2>Elemento del formulario</h2>
+    <form >
+        <p>
+            <label for="idName">Nombre</label><br>
+            <input type="text" name="name" id="idName" placeholder="Ingrese el Nombre">
+        </p>
+        <p>
+            <label for="idSurname">Apellido</label><br>
+            <input type="text" name="surname" id="idSurname" placeholder="Ingrese el Apellido">
+        </p>
+        <p>
+            <label for="idPassword">Password</label><br>
+            <input type="password" name="password" id="idPassword">
+        </p>
+        <p>
+            <label for="idAge">Edad</label><br>
+            <input type="number" name="age" id="idAge" min="0" max="120">
+        </p>
+        <label for="">Mascota favorita</label><br>
+        <input type="checkbox" value="cat" name="pet">Gato <br>
+        <input type="checkbox" value="dog" name="pet">Perro <br>
+        <input type="checkbox" value="bird" name="pet">Pajaro <br>
+
+        <label for="">Genero</label><br>
+        <input type="radio" value="male" name="gender">Hombre <br>
+        <input type="radio" value="female" name="gender">Mujer <br>
+        <input type="radio" value="other" name="gender">Otro <br>
+        <p>
+            <label for="">Calificacion</label>
+            <input type="range" min="1" max="100" name="calification" value="100">
+        </p>
+        <p>
+            <label for="">Selecciona el color</label>
+            <input type="color">
+        </p>
+        <textarea name="descripcion" id="" cols="30" rows="10"></textarea>
+        <p>
+            <input type="email">
+        </p>
+        <p>
+            <input type="file">
+        </p>
+        <p>
+            <input type="date">
+        </p>
+        <p>
+            <input type="time">
+        </p>
+    </form>
 </body>
 </html>
