html ultima clase

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
     <!-- contiene informacion de mi pagina  y no es visible al usuario -->
     <head>
-        <link rel="stylesheet" href="CSS/style.css"></link>
+        <link rel="stylesheet" href="/CSS/style.css">
         <!-- muestra el titulo en la pestaña del navegador -->
         <title>
             Estructura basica de html
@@ -32,7 +32,12 @@
             <!-- Contenido principal -->
         </main>
         <h1 class="estiloParrafo">Curso RollingCode Fullstack</h1>
-        <h2>¿En que consiste ser desarrollador fullstack</h2>
+        <img src="/assets/Images/mern.png" alt="banner-mern" width="740">
+        <h2 id="primerTitulo">¿En que consiste ser desarrollador fullstack</h2>
+        <img src="/assets/Images/happy.gif" alt="happy developer" width="400">
+        <div class="cajas" id="caja1">caj1</div>
+        <div class="cajas" id="caja2">caj2</div>
+        <div class="cajas" id="caja3">caj3</div>
         <h3>FrontEnd</h3>
             <p>Lorem ipsum dolor sit</p>
             <ol>
