--- a/pages/gallery/gallery.html
+++ b/pages/gallery/gallery.html
@@ -21,5 +21,16 @@
     </header>
     <a href="/index.html" target="">Home</a>
     <h1>Galleria</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi explicabo ut quod nobis non, at error dignissimos natus minima expedita facilis atque reprehenderit accusantium odit molestias earum voluptate quis perspiciatis!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil, labore ducimus at impedit dolor culpa molestias officiis pariatur doloremque necessitatibus dolorum quod consequatur, nesciunt officia amet, totam nam illo incidunt!</p>
+
+    <video src="/assets/Video/shrek jengibre.mp4" controls></video>
+    <!-- para que sea inicie cuando abras la pangina es autoplay -->
+    <audio controls>
+        <source src=""> 
+    </audio>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/VloQavPPQnM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://open.spotify.com/embed/artist/711MCceyCBcFnzjGY4Q7Un" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </body>
 </html>
