--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -69,6 +69,28 @@
         <p>
             <input type="time">
         </p>
+        <label for="carId">Selecionar auto pref</label>
+        <select name="car" id="car">
+            <option value="peugeot">peugeot</option>
+            <option value="fiat">fiat</option>
+            <option value="renault">renault</option>
+        </select>
+        <br>
+        <textarea name="" id="" cols="30" rows="10">
+
+        </textarea>
+        <br>
+        <fieldset>
+            <legend>Ingrese provincia</legend>
+            <input type="text" list="provincia">
+            <datalist id="provincia">
+                <option value="Cordoba"></option>
+                <option value="Cordoba"></option>
+                <option value="Cordoba"></option>
+                <option value="Cordoba"></option>
+                <option value="Cordoba"></option>
+            </datalist>
+        </fieldset>
     </form>
 </body>
 </html>
