--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <!-- es el cuerpo de mi pagina y donde voy a montar la estructura que el usuario va a visualizar -->
     <body>
         <header>
-            <a href="/index.html">
-            <img src="assets/RC-logo.png" alt="Logo de RollingCode" width="300">
+            <!-- <a href="/index.html">
+            <img src="assets/RC-logo.png" alt="Logo de RollingCode" width="270"> -->
             <!-- Titulo, Logo de la pagina y tambien la barra de navegacion -->
             </a>
             <nav>
-                <a href="#">Inicio</a>
-                <a href="pages/gallery/gallery.html">Galleria</a>
-                <a href="pages/contact/contact.html">Contacto</a>
-                <a href="pages/about-us/about-us.html">Acerca de</a>
+                <a class="botonesNav"  href="#">Inicio</a>
+                <a class="botonesNav"  href="pages/gallery/gallery.html">Galleria</a>
+                <a class="botonesNav"  href="pages/contact/contact.html">Contacto</a>
+                <a class="botonesNav"  href="pages/about-us/about-us.html">Acerca de</a>
                 <p></p>
-                <a href="#comentary-h5">comentarios</a>
-                <a href="#BackEnd">back end</a>
+                <a class="botonesNav"  href="#comentary-h5">comentarios</a>
+                <a  class="botonesNav" href="#BackEnd">back end</a>
             </nav>
         </header>
         <hr>
