--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
                 <a class="botonesNav"  href="pages/contact/contact.html">Contacto</a>
                 <a class="botonesNav"  href="pages/about-us/about-us.html">Acerca de</a>
                 <p></p>
-                <a class="botonesNav"  href="#comentary-h5">comentarios</a>
-                <a  class="botonesNav" href="#BackEnd">back end</a>
+                <!-- <a class="botonesNav"  href="#comentary-h5">comentarios</a>
+                <a  class="botonesNav" href="#BackEnd">back end</a> -->
             </nav>
         </header>
         <hr>
         <main>
             <!-- Contenido principal -->
         </main>
-        <h1 class="estiloParrafo">Curso RollingCode Fullstack</h1>
-        <img src="/assets/Images/mern.png" alt="banner-mern" width="740">
+        <h1 class="estiloParrafo" style="color: white;">Curso_RollingCode_Fullstack</h1>
+        <img src="/assets/Images/mern.png" alt="banner-mern" width="600">
         <h2 id="primerTitulo">¿En que consiste ser desarrollador fullstack</h2>
-        <img src="/assets/Images/happy.gif" alt="happy developer" width="400">
+        <img src="/assets/Images/happy.gif" alt="happy developer" width="400" id="gift">
         <div class="cajas" id="caja1">caj1</div>
         <div class="cajas" id="caja2">caj2</div>
         <div class="cajas" id="caja3">caj3</div>
@@ -72,7 +72,7 @@
                 </dd>
             </dl>
             <!-- pie de pagina -->
-            Curso RollingCode comision 12i - 2021
+            <p class="copyfooter" style="color: white;">&copy - Curso RollingCode comision 12i - 2021</p>
         </footer>
     </body>
 </html>
