--- a/pages/gallery/gallery.html
+++ b/pages/gallery/gallery.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/CSS/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +14,13 @@
         <!-- Titulo, Logo de la pagina y tambien la barra de navegacion -->
         </a>
         <nav>
-            <a href="/index.html">Inicio</a>
-            <a href="/pages/gallery/gallery.html">Galleria</a>
-            <a href="/pages/contact/contact.html">Contacto</a>
-            <a href="/pages/about-us/about-us.html">Acerca de</a>
+            <a class="botonesNav"  href="/index.html">Inicio</a>
+            <a class="botonesNav"  href="/pages/gallery/gallery.html">Galleria</a>
+            <a class="botonesNav"  href="/pages/contact/contact.html">Contacto</a>
+            <a class="botonesNav"  href="/pages/about-us/about-us.html">Acerca de</a>
+            <p></p>
+            <!-- <a class="botonesNav"  href="#comentary-h5">comentarios</a>
+            <a  class="botonesNav" href="#BackEnd">back end</a> -->
         </nav>
     </header>
     <a href="/index.html" target="">Home</a>
