--- a/pages/about-us/about-us.html
+++ b/pages/about-us/about-us.html
@@ -23,7 +23,11 @@
             <a  class="botonesNav" href="#BackEnd">back end</a> -->
         </nav>
     </header>
-    <a href="/index.html" target="">Home</a>
-    
+    <!-- <a href="/index.html" target="">Home</a> -->
+    <section>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, fuga! Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam vel id nihil itaque necessitatibus optio voluptate soluta voluptas eius recusandae rem quis, rerum sit ipsam ipsa suscipit aliquid voluptates eos.</section>
+    <aside><li>elemento side</li> </aside>
+    <aside><li>elemento side</li> </aside>
+    <aside><li>elemento side</li> </aside>
+    <aside><li>elemento side</li> </aside>
 </body>
 </html>
