--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <!-- es el cuerpo de mi pagina y donde voy a montar la estructura que el usuario va a visualizar -->
     <body>
         <header>
-            <!-- <a href="/index.html">
-            <img src="assets/RC-logo.png" alt="Logo de RollingCode" width="270"> -->
+            <a href="/index.html">
+            <img src="/assets/RC-logo.png" alt="Logo de RollingCode" width="300">
             <!-- Titulo, Logo de la pagina y tambien la barra de navegacion -->
             </a>
             <nav>
-                <a class="botonesNav"  href="#">Inicio</a>
-                <a class="botonesNav"  href="pages/gallery/gallery.html">Galleria</a>
-                <a class="botonesNav"  href="pages/contact/contact.html">Contacto</a>
-                <a class="botonesNav"  href="pages/about-us/about-us.html">Acerca de</a>
+                <a class="botonesNav"  href="/index.html">Inicio</a>
+                <a class="botonesNav"  href="/pages/gallery/gallery.html">Galleria</a>
+                <a class="botonesNav"  href="/pages/contact/contact.html">Contacto</a>
+                <a class="botonesNav"  href="/pages/about-us/about-us.html">Acerca de</a>
                 <p></p>
                 <!-- <a class="botonesNav"  href="#comentary-h5">comentarios</a>
                 <a  class="botonesNav" href="#BackEnd">back end</a> -->
@@ -61,6 +61,10 @@
             Aspernatur voluptatibus magnam quam voluptatum, asperiores quod iure numquam explicabo illo architecto quisquam omnis accusamus unde nam, soluta ipsa, dicta inventore at blanditiis. Sapiente saepe, aspernatur eveniet magnam inventore neque.
             Distinctio dolores, laudantium ducimus vel voluptate facere vitae autem dolore eos, odit ex nostrum ipsa dolor, rem exercitationem molestias consectetur pariatur nesciunt. Culpa delectus nostrum quos voluptates distinctio modi perspiciatis!
         </p>
+        <div class="whatsapp" >
+            <a href="https://wa.link/d6j14g">
+            <img src="/assets/Images/iconfinder-whatsapp-4661617_122497.png" alt=""></a>
+        </div>
         <hr>
         <footer>
             <dl>
@@ -73,6 +77,7 @@
             </dl>
             <!-- pie de pagina -->
             <p class="copyfooter" style="color: white;">&copy - Curso RollingCode comision 12i - 2021</p>
+            <img src="/assets/RC-logo.png" alt="" class="logroll">
         </footer>
     </body>
 </html>
